syntax = "proto3";

package business.v1;

option go_package = "sabitou/proto/business/v1;businessV1";

service BusinessService {
  rpc CreateBusiness(CreateBusinessRequest) returns (CreateBusinessResponse);
  rpc GetBusiness(GetBusinessRequest) returns (GetBusinessResponse);
  rpc UpdateBusiness(UpdateBusinessRequest) returns (UpdateBusinessResponse);
  rpc DeleteBusiness(DeleteBusinessRequest) returns (DeleteBusinessResponse);
}

message Business {
  string id = 1;
  string name = 3;
  string description = 4;
  string created_at = 7;
  string updated_at = 8;
}

message CreateBusinessRequest {
  Business business = 1;
}

message CreateBusinessResponse {
  string id = 1;
}

message GetBusinessRequest {
  string id = 1;
}

message GetBusinessResponse {
  Business business = 1;
}

message UpdateBusinessRequest {
  Business business = 1;
}

message UpdateBusinessResponse {
  Business business = 1;
}

message DeleteBusinessRequest {
  string id = 1;
}

message DeleteBusinessResponse {
  bool success = 1;
}
